[package]
name = "makepad-livspace"
version = "0.6.0"
authors = ["Alan poon"]
edition = "2021"
description = "Makepad simple example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "db3R5Gxh5Njhx8E-8kuZ2plQ1AI="

[dependencies]
makepad-widgets = { path = "../makepad/widgets", version = "0.6.0" }
wasmedge-types = "0.4.4"
lazy_static = "1.4.0"
wasmedge-sdk = { path ="../../wasmedge/wasmedge-rust-sdk2", features = ["wasi_nn","async"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"